# cnaster

./: .gitignore  .python-version  CHANGES.md  README.md  config.json  config.yaml  main.nf  pyproject.toml  pytest.ini  sim_config.json
cnaster_rs/: Cargo.toml  README.md  pyproject.toml
cnaster_rs/src/: config.rs  ellipse.rs  emission.rs  lib.rs  sim_config.rs
containers/: cnaster.def
docs/nb/: sim.ipynb  sim_validation.ipynb  validate_cnas.ipynb  validate_meta.ipynb
mock/: mock_phased.vcf.gz.tbi  mock_sample_list.tsv
python/cnaster/: clones.py  config.py  ellipse.py  field.py  filter.py  fit_emission.py  hmm.py  hmm_NB_BB_nophasing_v2.py  hmm_emission.py  hmm_emission_eval.py  hmm_initialize.py  hmm_nophasing.py  hmm_sitewise.py  hmm_update.py  hmm_utils.py  hmrf.py  hmrf_utils.py  icm.py  inference.py  initialize.py  integer_copy.py  io.py  neyman_pearson.py  normal_spot.py  omics.py  phasing.py  plotting.py  pseudobulk.py  recomb.py  reference.py  spatial.py
python/cnaster/deprecated/: hmm_emission.py  hmm_nophasing.py  hmrf.py
python/cnaster/sandbox/: io.py  plotting.py  test_parallel_emfit.py  test_threaded_emfit.py
python/cnaster/scripts/: create_allele_matrices.py  prep_snps.py  run_cnaster.py
python/cnaster/sim/: baseline.py  clone.py  io.py  phylogeny.py  visium.py
python/cnaster/sim/scripts/: run_cnaster_sim.py
tests/: conftest.py  test_emission.py  test_hmm_initialize.py  test_hmm_nophasing.py  test_hmrf.py
