[package]
name = "cnaster-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cnaster_rs"
crate-type = ["cdylib"]

[dependencies]
statrs = "*"
rayon = "*"
numpy = { version = "*" }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
ndarray = {version = "0.15", features = ["rayon"] }
once_cell = "1.10"
num_cpus = "1.0"
itertools = "0.12"
rand = "0.8.5"
ordered-float = "2.10.0"
nalgebra = "*"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
lazy_static = "1.5.0"
GSL = "7.0"

[profile.release]
opt-level = 3
lto = true
